...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j4B-Y4-mWO">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
                                <color key="tintColor" name="blue"/>
                                <items>
                                    <navigationItem title="Acelerometer" id="LIh-6d-sHc"/>
                                </items>
                            </navigationBar>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="axes" translatesAutoresizingMaskIntoConstraints="NO" id="y4B-8q-tOb">
                                <rect key="frame" x="0.0" y="96" width="375" height="240"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rz3-7f-Kfr">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
                                <color key="tintColor" name="blue"/>
                                <items>
                                    <navigationItem title="Location" id="RLh-rg-Pym"/>
                                </items>
                            </navigationBar>
                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" pitchEnabled="NO" showsUserLocation="YES" showsBuildings="NO" showsCompass="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yp8-mH-U4U">
                                <rect key="frame" x="0.0" y="96" width="375" height="240"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="240" id="4bI-S8-Bdg"/>
...
                        <subviews>
                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NfC-Cr-p73">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
                                <color key="tintColor" name="blue"/>
                                <color key="barTintColor" systemColor="secondaryLabelColor"/>
                                <items>
                                    <navigationItem title="Gyroscope" id="kkv-e1-sYe"/>
                                </items>
                            </navigationBar>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFX-ST-ZkE" customClass="RunnerButton" customModule="FiveSenses" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="570" width="375" height="48"/>
                                <color key="backgroundColor" name="blue"/>
                                <constraints>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hWx-jP-UG9">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="96"/>
                                <color key="tintColor" name="blue"/>
                                <items>
                                    <navigationItem title="Compas" id="MBp-Tc-OD2"/>
                                </items>
                            </navigationBar>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iln-YL-Efk" customClass="RunnerButton" customModule="FiveSenses" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="570" width="375" height="48"/>
                                <color key="backgroundColor" name="blue"/>
                                <constraints>
...
                            <constraint firstItem="N9O-8x-Xqo" firstAttribute="leading" secondItem="aTU-sE-faI" secondAttribute="leading" id="i3C-5O-LbE"/>
                            <constraint firstItem="LMv-dQ-JlV" firstAttribute="trailing" secondItem="aTU-sE-faI" secondAttribute="trailing" id="jOw-2A-emI"/>
                            <constraint firstItem="aTU-sE-faI" firstAttribute="trailing" secondItem="aJG-42-QM6" secondAttribute="trailing" constant="40" id="joC-hK-ss9"/>
                            <constraint firstItem="N9O-8x-Xqo" firstAttribute="bottom" secondItem="aTU-sE-faI" secondAttribute="bottom" id="qjH-hq-FCG"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Maps" image="globe" id="12l-Oy-kFm"/>
                    <connections>
                        <outlet property="mapView" destination="N9O-8x-Xqo" id="Djb-Qk-vNf"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="8lP-A8-0Gt" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
